--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Pablo Arango
+title: 
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   Personal website and experiment.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://pabloarango.com" # the base hostname & protocol for your site
-github_username: whospablo
-linkedin_username: pabloarango
+url: # "http://pabloarango.com" # the base hostname & protocol for your site
+github_username: # whospablo
+linkedin_username: 
 
 # Build settings
 markdown: kramdown
